[package]
name = "bevy_perlin_noise"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.2", features = ["dynamic_linking", "bevy_dev_tools"] }
noise = "0.8.2"
rand = "0.8.5"
bevy_pancam = { version = "0.17", features = ["bevy_egui"] }
bevy_egui = "0.32.0"
bevy-inspector-egui = "0.29.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
